--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>ExamsHelper</title>
 
-    <link rel="stylesheet" type="text/css" href="../css/index.css"/>
+    <link rel="stylesheet" type="text/css" href="../styles/index.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="../js/index.js"></script>
 </head>
@@ -13,6 +13,7 @@
 
     <div class="top">
         <h3 ng-controller="appName">{{appName}}</h3>
+
     </div>
 
 
