--- a/resources/html/login.html
+++ b/resources/html/login.html
@@ -17,12 +17,12 @@
     <div class="sign_in">
         <h3 ng-controller="appName">{{appName}}</h3>
 
-        <div class="sign_in-form">
-            <input type="text" placeholder="login" id="username"/>
-            <input type="password" placeholder="password" id="password" />
+        <div class="sign_in-form" ng-controller="singInForm">
+            <input type="text" placeholder="login" id="username" ng-model="username"/>
+            <input type="password" placeholder="password" id="password" ng-model="password"/>
 
             <div class="buttons">
-                <div class="button" id="submit">Sign in</div>
+                <div class="button" id="submit" ng-click="tryToSignIn()">Sign in</div>
                 <div class="button" id="create-account">Sign up</div>
             </div>
 
