connection with the server

--- a/resources/html/login.html
+++ b/resources/html/login.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="../styles/login.css"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-cookies.js"></script>
     <script src="../js/login.js"></script>
 
     <meta charset="UTF-8">
