--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -6,19 +6,14 @@
 
     <link rel="stylesheet" type="text/css" href="../styles/index.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-cookies.js"></script>
     <script src="../js/index.js"></script>
 </head>
 <body>
 <div ng-app="ExamsHelperApp">
-
     <div class="top">
         <h3 ng-controller="appName">{{appName}}</h3>
-
     </div>
-
-
 </div>
-
-
 </body>
 </html>
