nodejs server; token handling

--- a/app/src/login.html
+++ b/app/src/login.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="../styles/login.css"/>
+
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-cookies.js"></script>
-    <script src="../js/login.js"></script>
+    <link rel="stylesheet" type="text/css" href="/styles/login.css"/>
+    <script src="/scripts/angular/angular.js" ></script>
 
     <meta charset="UTF-8">
     <title>Login</title>
 </head>
 <body>
 
-<div ng-app="ExamsHelperApp-login">
+<div ng-app="ExamsHelperApp">
 
 
     <div class="sign_in">
@@ -35,4 +34,6 @@
 </div>
 
 </body>
+<script src="index.js"></script>
+<script src="login.js"></script>
 </html>
