--- a/app/src/html/index.html
+++ b/app/src/html/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <title>ExamsHelper</title>
 
-    <link rel="stylesheet" type="text/css" href="../styles/index.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-cookies.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="/styles/index.css"/>
     <script src="../js/index.js"></script>
 </head>
 <body>
@@ -16,4 +15,6 @@
     </div>
 </div>
 </body>
+
+
 </html>
