--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="ExamsHelper">
+<html lang="en" ng-app="ExamsHelper" ng-cloak>
 <head>
     <meta charset="UTF-8">
     <title>ExamsHelper</title>
@@ -16,14 +16,13 @@
         <li><a href="#exams">Exams</a></li>
         <li><a href="#subjects">Subjects</a></li>
         <li><a href="#stats">Stats</a></li>
+        <li><a href="/login">Logout</a></li>
         
     </ul>
 </div>
 
 
-<div ng-controller="Ctrl">
-    <h2>{{title}}</h2>
-
+<div ng-controller="MainController">
     <div class="content">
         <div ng-view></div>
     </div>
@@ -36,5 +35,6 @@
 
 <script src="./index.js"></script>
 <script src="/js/user.js"></script>
+<script src="js/subjects.js"></script>
 
 </html>
