--- a/app/src/html/user.html
+++ b/app/src/html/user.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="card card-border" ng-controller="UserController">
+    <div class="card card-border user-card" ng-controller="UserController">
 
         <p class="title">{{user.username}}</p>
         <p>{{user.email}}</p>
