--- a/app/src/index.html
+++ b/app/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ExamsHelper</title>
-    <link rel="stylesheet" type="text/css" href="./styles/index.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/index.css"/>
     <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
 
@@ -33,11 +33,11 @@
 </body>
 
 
-<script src="/scripts/angular/angular.js"></script>
-<script src="/scripts/angular-route/angular-route.js"></script>
+<script src="lib/angular/angular.js"></script>
+<script src="lib/angular-route/angular-route.js"></script>
 
-<script src="./index.js"></script>
-<script src="/js/user.js"></script>
+<script src="index.js"></script>
+<script src="js/user.js"></script>
 <script src="js/subjects.js"></script>
 
 </html>
