--- a/app/src/html/login.html
+++ b/app/src/html/login.html
@@ -1,10 +1,9 @@
-<div class="sign_in-form" ng-controller="singInForm">
-    <input type="text" placeholder="login" id="username" ng-model="username"/>
-    <input type="password" placeholder="password" id="password" ng-model="password"/>
+<div class="sign-form" ng-controller="SignInController">
+    <form>
+        <p class="error-message" ng-show="errors">{{errors}}</p>
+        <input type="text" autocomplete required placeholder="username" name="username" id="username">
+        <input type="password" required placeholder="password" name="password" id="password">
 
-    <div class="buttons">
-        <div class="button" id="submit" ng-click="tryToSignIn()">Sign in</div>
-        <div class="button" id="create-account" onclick="window.location = '/login#/register'">Sign up</div>
-    </div>
-
+        <button type="submit" class="button button-block" ng-click="tryToSignIn()">Sign in</button>
+    </form>
 </div>
