--- a/app/src/html/register.html
+++ b/app/src/html/register.html
@@ -1,11 +1,3 @@
-<div class="sign_in-form" ng-controller="singUpForm">
-    <input type="text" placeholder="login" id="username" ng-model="username"/>
-    <input type="password" placeholder="password" id="password" ng-model="password"/>
-    <input type="email" placeholder="email" id="email" ng-model="email"/>
-
-    <div class="buttons">
-        <div class="button" id="create-account" ng-click="register()">Sign up</div>
-    </div>
-
+<div class="sign-form">
+    <h2>Register</h2>
 </div>
-
