--- a/app/src/html/register.html
+++ b/app/src/html/register.html
@@ -1,3 +1,13 @@
-<div class="sign-form">
-    <h2>Register</h2>
+<div class="sign-form" ng-controller="SignUpController">
+    <form>
+        <p class="error-message" ng-show="errors">{{errors}}</p>
+        <div class="inputs">
+            <input type="text" autocomplete required placeholder="username" name="username" id="username"
+                   ng-model="username">
+            <input type="email" autocomplete required placeholder="email" name="email" id="email" ng-model="email">
+            <input type="password" required placeholder="password" name="password" id="password" ng-model="password">
+        </div>
+        <button type="submit" class="button button-block" ng-click="register()">Sign up</button>
+
+    </form>
 </div>
