change date display

--- a/app/src/html/user.html
+++ b/app/src/html/user.html
@@ -3,7 +3,7 @@
 
         <p class="title">{{user.username}}</p>
         <p>{{user.email}}</p>
-        <p>{{user.registerDate}}</p>
+        <p>{{user.date()}}</p>
     </div>
 </div>
 
