--- a/app/src/html/subjects-dialog.html
+++ b/app/src/html/subjects-dialog.html
@@ -1,10 +1,19 @@
 <div class='ng-modal' ng-show='show'>
     <div class='ng-modal-overlay' ng-click='hideModal()'></div>
     <div class='ng-modal-dialog' ng-style='dialogStyle'>
-        <div class='ng-modal-close' ng-click='hideModal()'>X</div>
         <div class='ng-modal-dialog-content'>
-            <h1 ng-show="subject" class="ng-modal-dialog-header">{{subject.label}}</h1>
-            <h1 ng-show="!subject" class="ng-modal-dialog-header">Add new subject</h1>
+
+            <div class="ng-modal-dialog-color" ng-style="{background: subject.color}">
+
+                <input type="text" id="ng-modal-dialog-subject-label" ng-value="subject.label" placeholder="Label">
+                <input type="color" hidden disabled id="ng-modal-dialog-subject-color" ng-value="subject.color" value="#9B59B6">
+            </div>
+
+            <div class="dialog-buttons">
+                <div class="dialog-button" ng-click="saveSubject(subject)">SAVE</div>
+                <div class="dialog-button" ng-click="hideModal()">CANCEL</div>
+            </div>
+
         </div>
     </div>
 </div>
