saving and updating subjects on server

--- a/app/src/html/subjects-dialog.html
+++ b/app/src/html/subjects-dialog.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="dialog-buttons">
-                <div class="dialog-button" ng-click="saveSubject(subject)">SAVE</div>
+                <div class="dialog-button" ng-click="saveOrUpdateSubject(subject)">SAVE</div>
                 <div class="dialog-button" ng-click="hideModal()">CANCEL</div>
             </div>
 
