--- a/app/src/html/subjects.html
+++ b/app/src/html/subjects.html
@@ -24,5 +24,5 @@
         +
     </div>
 
-    <modal-dialog  subject='updatedSubject' show='modalShown' width='400px' height='50%'></modal-dialog>
+    <modal-dialog  subject='updatedSubject' subjects='subjects' show='modalShown' width='400px' height='50%'></modal-dialog>
 </div>
