--- a/app/src/html/subjects.html
+++ b/app/src/html/subjects.html
@@ -10,6 +10,7 @@
                             {{subject.label[0]}}
                         </div>
                     </div>
+                    <div class="delete-x" ng-click="deleteSubject(subject, $event)">X</div>
                     <p>{{subject.label}}</p>
                 </div>
                 <div class="subject-card-bottom">
