--- a/app/src/index.html
+++ b/app/src/index.html
@@ -39,5 +39,6 @@
 <script src="index.js"></script>
 <script src="js/user.js"></script>
 <script src="js/subjects.js"></script>
+<script src="js/exams.js"></script>
 
 </html>
