--- a/app/src/html/subjects.html
+++ b/app/src/html/subjects.html
@@ -25,5 +25,5 @@
         +
     </div>
 
-    <modal-dialog  subject='updatedSubject' subjects='subjects' show='modalShown' width='400px' height='50%'></modal-dialog>
+    <edit-subject-dialog subject='updatedSubject' subjects='subjects' show='modalShown' width='400px' height='50%'></edit-subject-dialog>
 </div>
