--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>ExamsHelper</title>
+
+    <link rel="stylesheet" href="/styles.css" type="text/css"/>
 </head>
 <body>
 
-<div id="app"></div>
+<div class="card-panel teal lighten-2" id="app"></div>
 
 </body>
 
-<script type="text/javascript" src="dist/bundle.js"></script>
+<script type="text/javascript" src="/bundle.js"></script>
 </html>
