--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
 <body>
 
 <div class="card-panel teal lighten-2" id="app"></div>
+<div class="card-panel red" translate="DUPA">
+</div>
 
 </body>
 
