--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ExamsHelper</title>
-
+    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
     <link rel="stylesheet" href="/styles.css" type="text/css"/>
 </head>
 <body>
@@ -11,7 +11,7 @@
 <div class="card-panel teal lighten-2" id="app"></div>
 <div class="card-panel red" translate="DUPA">
 </div>
-
+<div ui-view></div>
 </body>
 
 <script type="text/javascript" src="/bundle.js"></script>
