--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>ExamsHelper</title>
-    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+    <link rel="shortcut icon" sizes="144x144" href="/assets/img/favicon.ico">
     <link rel="stylesheet" href="/styles.css" type="text/css"/>
 </head>
 <body>
-
 <div ui-view></div>
 </body>
 
