--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>ExamsHelper</title>
-    <link rel="shortcut icon" sizes="144x144" href="/assets/img/favicon.ico">
-    <link rel="stylesheet" href="/styles.css" type="text/css"/>
+    <link rel="shortcut icon" sizes="144x144" href="./assets/img/favicon.ico">
+    <link rel="stylesheet" href="./styles.css" type="text/css"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
@@ -12,5 +12,5 @@
 <div ui-view></div>
 </body>
 
-<script type="text/javascript" src="/bundle.js"></script>
+<script type="text/javascript" src="./bundle.js"></script>
 </html>
